# DarwinPlusPlus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/Evolutionary/: CMakeLists.txt
examples/Evolutionary/example_bitstring/: CMakeLists.txt  example_bitstring.cpp
examples/Evolutionary/example_permutation/: CMakeLists.txt  MathematicaSolver.m  MathematicaVisualizer.m  example_permutation.cpp
examples/Evolutionary/simple_usage/: CMakeLists.txt  example_bitstring.cpp  extend_random.h  testEvolutionary.cpp
examples/random/: CMakeLists.txt
examples/random/bitstrings/: CMakeLists.txt  bitstring.cpp  extend_random.h
examples/random/permutations/: CMakeLists.txt  example_permutation.cpp
examples/random/simple_usage/: CMakeLists.txt  example_string.cpp  extend_random.h  random.cpp
include/: DarwinConfig.h  GeneticAlgorithms.h  IEvolutionaryConfig.h  ProbabilisticEvolutionaryConfig.h
include/Initialization/: IInitialization.h  RandomInitialization.h
include/Random/: Random.h  discrete_distribution.h
include/Selection/: ISelection.h  MixedSelection.h  MultiSelection.h  NotImplementedSelection.h  PSelection.h  ThresholdSelection.h  UniformSelection.h
include/datastructures/: algorithms.h
include/modules/: Memoization.h
include/modules/bitstring/: bitstring.h  bitstring_uniform_distribution.h
include/modules/permutation/: permutation.h  permutationImpl.h  permutation_uniform_distribution.h
src/: CMakeLists.txt  GeneticAlgorithms.cpp  sqr.cpp  sqr.h
src/modules/permutation/: permutation.cpp
tests/: CMakeLists.txt  test.cpp
